fix align in footer for small devices

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -75,7 +75,7 @@
 }
 @media (max-width: 400px) {
   .footerSections {
-    justify-content: flex-start;
+    justify-content: center;
   }
 }
 
@@ -122,15 +122,13 @@
     margin: 0px !important;
   }
 }
-.socialIcon > * {
-  margin-right: 8px;
-  margin-left: 28px;
-}
 
 .socialIcon {
+  width: 100%;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .titleDivider {
